--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <!-- sidebar navigation -->
+        <div class="sidebar">
+            <h1>section one</h1>
+        </div>
+        <!-- header -->
+        <div class="header">
+            <h1>section two</h1>
+        </div>
+        <!-- main-content -->
+        <div class="project_content">
+            <h1>section three</h1>
+        </div>
+    </div>
 </body>
 </html>
