sidebar navigation layout added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
     <div class="container">
         <!-- sidebar navigation -->
         <div class="sidebar">
-            <h1>section one</h1>
+            <div class="dashboard">
+                <div class="title">
+                    <img src="images/icons/view-dashboard.svg" alt="dashboard icon" class="dash_image">
+                    <h1>Dashboard</h1>
+                </div>
+            </div>
+            <div class="nav_icons_one">
+                <div class="icons">
+                    <img src="images/icons/home.svg" alt="house icon">
+                    <h2>Home</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/card-account-details-outline.svg" alt="credit card">
+                    <h2>Profile</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/message-reply.svg" alt="message speech box">
+                    <h2>Messages</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/clock-time-three.svg" alt="clock showing 3 o'clock">
+                    <h2>History</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/file-multiple.svg" alt="stacked files">
+                    <h2>Tasks</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/account-group.svg" alt="group of 3 persons">
+                    <h2>Communities</h2>
+                </div>
+            </div>
+            <div class="nav_icons_two">
+                <div class="icons">
+                    <img src="images/icons/cog.svg" alt="machine cog">
+                    <h2>Settings</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/help-box.svg" alt="box with question mark inside">
+                    <h2>Support</h2>
+                </div>
+                <div class="icons">
+                    <img src="images/icons/shield-check.svg" alt="shield with a tick inside">
+                    <h2>Privacy</h2>
+                </div>
+            </div>
         </div>
         <!-- header -->
         <div class="header">
@@ -22,4 +70,5 @@
         </div>
     </div>
 </body>
+
 </html>
