layout for header added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,32 @@
         </div>
         <!-- header -->
         <div class="header">
-            <h1>section two</h1>
+            <div class="top_section_header">
+                <div class="search">
+                    <img src="images/icons/magnify.svg" alt="magnifying glass" class="header_icons">
+                    <input type="search" class="search_bar">
+                </div>
+                <div class="notification">
+                    <img src="images/icons/bell-ring-outline.svg" alt="ringing bell" class="header_icons">
+                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away" class="header_icons">
+                    <h3>Morgon Oakley</h3>
+                </div>
+            </div>
+
+            <div class="bottom_section_header">
+                <div class="avatar_greeting">
+                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away" class="header_icons">
+                    <div class="avatar_text">
+                        <p>Hi there,</p>
+                        <h2>Morgon Oakley (@morgon)</h2>
+                    </div>
+                </div>
+                <div class="header_buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <!-- main-content -->
         <div class="project_content">
