project content layout work in progress

--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
                 </div>
                 <div class="notification">
                     <img src="images/icons/bell-ring-outline.svg" alt="ringing bell" class="header_icons">
-                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away" class="header_icons">
+                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away"
+                        class="header_icons">
                     <h3>Morgon Oakley</h3>
                 </div>
             </div>
 
             <div class="bottom_section_header">
                 <div class="avatar_greeting">
-                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away" class="header_icons">
+                    <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away"
+                        class="header_icons">
                     <div class="avatar_text">
                         <p>Hi there,</p>
                         <h2>Morgon Oakley (@morgon)</h2>
@@ -91,7 +93,80 @@
         </div>
         <!-- main-content -->
         <div class="project_content">
-            <h1>section three</h1>
+            <h2>Your Projects</h2>
+            <div class="left_projects">
+                <div class="project_cards">
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="project_texts">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                        </div>
+                        <div class="project_icons">
+                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
+                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
+                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right_projects">
+
+            </div>
         </div>
     </div>
 </body>
