--- a/index.html
+++ b/index.html
@@ -93,73 +93,114 @@
         </div>
         <!-- main-content -->
         <div class="project_content">
-            <h2>Your Projects</h2>
+            <div class="project_title">
+                <h2>Your Projects</h2>
+            </div>
             <div class="left_projects">
+
                 <div class="project_cards">
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                    <div class="row_one">
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo,
+                                    aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia
+                                    quo voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
                         </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo,
+                                    illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam
+                                    dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
                         </div>
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo,
+                                    illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam
+                                    dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
+                    <div class="row_two">
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo,
+                                    aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia
+                                    quo
+                                    voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
                         </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo,
+                                    aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia
+                                    quo
+                                    voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
                         </div>
-                    </div>
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
-                        </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
-                        </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
-                        </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
-                        </div>
-                    </div>
-                    <div class="cards">
-                        <div class="project_texts">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo, aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia quo voluptates at aliquid vel sunt quidem.</p>
-                        </div>
-                        <div class="project_icons">
-                            <img src="images/icons/star-plus-outline.svg" alt="star with plus sign" class="card_icons">
-                            <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign" class="card_icons">
-                            <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files" class="card_icons">
+                        <div class="cards">
+                            <div class="project_texts">
+                                <h3>Super Cool Project</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque explicabo, illo,
+                                    aperiam natus error mollitia quam expedita eaque doloribus, quibusdam dolorum quia
+                                    quo
+                                    voluptates at aliquid vel sunt quidem.</p>
+                            </div>
+                            <div class="project_icons">
+                                <img src="images/icons/star-plus-outline.svg" alt="star with plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/eye-plus-outline.svg" alt="eye with a plus sign"
+                                    class="card_icons">
+                                <img src="images/icons/share-variant-outline.svg" alt="icon for sharing files"
+                                    class="card_icons">
+                            </div>
                         </div>
                     </div>
                 </div>
