project content announcement and trending work in progress

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 <h2>Your Projects</h2>
             </div>
             <div class="left_projects">
-
                 <div class="project_cards">
                     <div class="row_one">
                         <div class="cards">
@@ -206,7 +205,57 @@
                 </div>
             </div>
             <div class="right_projects">
-
+                <div class="announcement_title">
+                    <h2>Announcements</h2>
+                </div>
+                    <div class="announcement_text">
+                        <div class="announce">
+                            <h3>Site Maintenance</h3>
+                            <p>Posuere ac ut consequat semper viverra nam libero justo laoreet. Cras ornare arcu dui
+                                vivamus arcu felis bibendum ut tristique.</p>
+                        </div>
+                        <div class="announce">
+                            <h3>Community Share Day</h3>
+                            <p>Auctor eu augue ut lectus arcu. Sit amet commodo nulla facilisi nullam vehicula ipsum.
+                            </p>
+                        </div>
+                        <div class="announce">
+                            <h3>Updated Privacy Policy</h3>
+                            <p>Volutpat est velit egestas dui id ornare arcu odio. Lacinia at quis risus sed vulputate.
+                            </p>
+                        </div>
+                    </div>
+                <div class="trending_section">
+                    <div class="trending_title">
+                        <h2>Trending</h2>
+                    </div>
+                    <div class="trending_avatar">
+                        <img src="images/avatars/avatar-batman-comics-svgrepo-com.svg" alt="batman superhero"
+                            class="avatar_icons">
+                        <div class="avatar_text">
+                            <p>@tegan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                        <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away"
+                            class="avatar_icons">
+                        <div class="avatar_text">
+                            <p>@morgan</p>
+                            <p>Super Cool Project</p>
+                        </div>
+                        <img src="images/avatars/avatar-joker-squad-svgrepo-com.svg" alt="harley quinn villain"
+                            class="avatar_icons">
+                        <div class="avatar_text">
+                            <p>@kendall</p>
+                            <p>Life Changing App</p>
+                        </div>
+                        <img src="images/avatars/friday-halloween-jason-svgrepo-com.svg"
+                            alt="jason from friday 13th horror movie" class="avatar_icons">
+                        <div class="avatar_text">
+                            <p>@alex</p>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
