announcements and trending layout aligned correctly

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="notification">
                     <img src="images/icons/bell-ring-outline.svg" alt="ringing bell" class="header_icons">
                     <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away"
-                        class="header_icons">
+                        class="avatar_icons">
                     <h3>Morgon Oakley</h3>
                 </div>
             </div>
@@ -78,7 +78,7 @@
             <div class="bottom_section_header">
                 <div class="avatar_greeting">
                     <img src="images/avatars/anime-away-face-svgrepo-com.svg" alt="no face from spirited away"
-                        class="header_icons">
+                        class="greeting_icons">
                     <div class="avatar_text">
                         <p>Hi there,</p>
                         <h2>Morgon Oakley (@morgon)</h2>
